--- a/config/install/core.entity_view_display.block_content.osu_wide_card.default.yml
+++ b/config/install/core.entity_view_display.block_content.osu_wide_card.default.yml
@@ -27,7 +27,7 @@ third_party_settings:
               background:
                 background_type: color
               background_color:
-                class: null
+                class: osu-bg-page-default
               background_media:
                 image:
                   media_id: null
@@ -39,7 +39,7 @@ third_party_settings:
                   background_attachment: not_fixed
                   background_size: cover
               text_color:
-                class: null
+                class: osu-text-body
               text_alignment:
                 class: null
               padding:
