--- a/osu_block_types.info.yml
+++ b/osu_block_types.info.yml
@@ -2,8 +2,9 @@ name: OSU Block Types
 type: module
 description: Create Different Blocks types for use in OSU Drupal.
 package: OSU
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^9 || ^10
 dependencies:
   - core:block
   - core:layout_builder
   - osu_media:osu_media
+  - paragraphs:paragraphs
