Update naming of the paragraph types.

--- a/config/install/paragraphs.paragraphs_type.osu_accordion_item.yml
+++ b/config/install/paragraphs.paragraphs_type.osu_accordion_item.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: osu_accordion_item
-label: 'OSU Accordion Item'
+label: 'Accordion Item'
 icon_uuid: null
 icon_default: null
 description: ''
