--- a/config/install/paragraphs.paragraphs_type.osu_accordion_section.yml
+++ b/config/install/paragraphs.paragraphs_type.osu_accordion_section.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: osu_accordion_section
-label: 'OSU Accordion Section'
+label: 'Accordion Container'
 icon_uuid: null
 icon_default: null
 description: ''
