--- a/osu_block_types.info.yml
+++ b/osu_block_types.info.yml
@@ -3,6 +3,7 @@ type: module
 description: Create Different Blocks types for use in OSU Drupal.
 package: OSU
 core_version_requirement: ^9 || ^10
+version: 1.0.1
 dependencies:
   - core:block
   - core:layout_builder
