Fixed the update to actually have the Files imported correctly and create the configs correctly as well.

--- a/config/install/core.entity_view_display.paragraph.osu_accordion_section.default.yml
+++ b/config/install/core.entity_view_display.paragraph.osu_accordion_section.default.yml
@@ -23,7 +23,7 @@ content:
     region: content
   field_p_accordion_heading:
     type: string
-    label: inline
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
