Create configs for new block type osu_menu_bar_item. Add update hook to import and create that block type. Update block dependencies to include osu_icon_field.

--- a/osu_block_types.info.yml
+++ b/osu_block_types.info.yml
@@ -8,4 +8,5 @@ dependencies:
   - core:block
   - core:layout_builder
   - osu_media:osu_media
+  - osu_icon_field:osu_icon_field
   - paragraphs:paragraphs
