--- a/config/install/core.entity_form_display.block_content.osu_card.default.yml
+++ b/config/install/core.entity_form_display.block_content.osu_card.default.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.block_content.osu_card.field_osu_card_image
     - field.field.block_content.osu_card.field_osu_card_link
   module:
-    - link
+    - linkit
     - media_library
     - text
 id: block_content.osu_card.default
@@ -33,12 +33,14 @@ content:
       media_types: {  }
     third_party_settings: {  }
   field_osu_card_link:
-    type: link_default
+    type: linkit
     weight: 2
     region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
+      linkit_profile: default
+      linkit_auto_link_text: false
     third_party_settings: {  }
   info:
     type: string_textfield
