--- a/osu_block_types.info.yml
+++ b/osu_block_types.info.yml
@@ -7,6 +7,7 @@ version: 1.0.11
 dependencies:
   - core:block
   - core:layout_builder
+  - linkit:linkit
   - osu_media:osu_media
   - osu_icon_field:osu_icon_field
   - paragraphs:paragraphs
